@@ -1,4 +1,4 @@
-/*	$KAME: nd6_rtr.c,v 1.277 2005/10/27 10:29:17 ryuji Exp $	*/
+/*	$KAME: nd6_rtr.c,v 1.278 2006/03/15 09:29:50 suz Exp $	*/
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -306,16 +306,7 @@ nd6_ra_input(m, off, icmp6len)
 	bzero(&dr0, sizeof(dr0));
 	dr0.rtaddr = ip6->ip6_src;
 	dr0.flags  = nd_ra->nd_ra_flags_reserved;
-	if (rtpref(&dr0) == RTPREF_RESERVED) {
-		/*
-		 * "reserved" router preference should be treated as
-		 * 0-lifetime.  Note that rtpref() covers the case that the
-		 * kernel is not configured to support the preference
-		 * extension.
-		 */
-		dr0.rtlifetime = 0;
-	} else
-		dr0.rtlifetime = ntohs(nd_ra->nd_ra_router_lifetime);
+	dr0.rtlifetime = ntohs(nd_ra->nd_ra_router_lifetime);
 	dr0.expire = time_second + dr0.rtlifetime;
 	dr0.ifp = ifp;
 	dr0.advint = 0;		/* Mobile IPv6 */
@@ -804,9 +795,8 @@ rtpref(struct nd_defrouter *dr)
 	case ND_RA_FLAG_RTPREF_HIGH:
 		return (RTPREF_HIGH);
 	case ND_RA_FLAG_RTPREF_MEDIUM:
-		return (RTPREF_MEDIUM);
 	case ND_RA_FLAG_RTPREF_RSV:
-		return (RTPREF_RESERVED);
+		return (RTPREF_MEDIUM);
 	case ND_RA_FLAG_RTPREF_LOW:
 		return (RTPREF_LOW);
 	default:
