@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2818 2006/03/03 11:46:21 jinmei Exp $
+$KAME: CHANGELOG,v 1.2819 2006/03/15 09:29:50 suz Exp $
 
 <200603>
+2006-03-15  SUZUKI, Shinsuke <suz@alaxala.net>
+	* kame/sys/netinet6/nd6_rtr.c: implements section 2.2. of 
+	RFC4191, regarding the reserved preference value (10).
+	
 Fri Mar  3 20:20:37 JST 2006	keiichi@iijlab.net
 	* netbsd/sys/netinet6/in6_pcb.c: send an IPV6_PATHMTU ancillary
 	data when sending a packet whose size is larger than the path
